# Lyra-Ai-Mark2-

./: .env.example  .env.railway  .gitignore  .nixpacks.toml  .railwayignore  CHANGELOG.md  DEPLOYMENT.md  INTEGRATION_TESTING.md  PROJECT_SUMMARY.md  Procfile  QUICKSTART.md  RAILWAY.md  README.md  RELEASE_NOTES.md  RENDER_DEPLOY.md  TESTING_CHECKLIST.md  nixpacks.toml  railway.json  render.yaml  requirements.txt  run-production.sh  run_tests.bat  run_tests.sh  setup.bat  setup_venv.bat  start-frontend.bat  start-production.sh  start.bat  start.sh  verify_setup.bat
ai-worker/: app.py  app_lite.py  gunicorn_railway.py  requirements-lightweight.txt  requirements-optional.txt  requirements-railway.txt  requirements-security.txt  requirements.txt  setup_venv.bat  setup_venv.sh  stt.py  test_api_endpoints.py  test_cors_integration.py  test_crash_recovery_integration.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py
ai-worker/api/: __init__.py  health.py  health_status.py  status.py
ai-worker/config/: model_registry.yaml  permissions.json  startup.yaml
ai-worker/config_snapshot_phase1/: model_preloading.yaml  permissions.json
ai-worker/core/: config_validator.py  (+11 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
server/: README.md  app.py  model_router.py  requirements.txt  test_api_endpoints.py  test_integration.py  test_permissions_roles.py  test_phase1_enhancements.py  test_startup_health.py  test_websocket.py  tts.py  vision.py
ui/: index.html  package.json  vite.config.ts
ui/src-tauri/: Cargo.toml  tauri.conf.json
(+73 files in other folders)
